--- a/index.html
+++ b/index.html
@@ -46,20 +46,29 @@
     <h2>Vídeos Comerciais</h2>
     <div class="projetos">
       <div class="card">
-        <iframe src="https://www.youtube.com/embed/uO08ciSgcn4" title="Vídeo Comercial 1"></iframe>
-        <h3>Vídeo Comercial 1</h3>
+        <div class="thumb"><div class="thumb video" data-id="uO08ciSgcn4">
+  <img src="https://img.youtube.com/vi/uO08ciSgcn4/hqdefault.jpg" alt="Vídeo Comercial">
+  <div class="play-button"></div>
+</div></div>
+        <h3>Vídeo Comercial</h3>
         <p>Exemplo de vídeo comercial criado.</p>
         <a href="https://youtu.be/uO08ciSgcn4" target="_blank" class="btn">Assistir no YouTube</a>
       </div>
       <div class="card">
-        <iframe src="https://www.youtube.com/embed/tn-rhatSRdU" title="Vídeo Comercial 2"></iframe>
-        <h3>Vídeo Comercial 2</h3>
+        <div class="thumb"><div class="thumb video" data-id="tn-rhatSRdU">
+  <img src="https://img.youtube.com/vi/tn-rhatSRdU/hqdefault.jpg" alt="Vídeo Comercial">
+  <div class="play-button"></div>
+</div></div>
+        <h3>Vídeo Comercial</h3>
         <p>Exemplo de vídeo comercial criado.</p>
         <a href="https://youtu.be/tn-rhatSRdU" target="_blank" class="btn">Assistir no YouTube</a>
       </div>
       <div class="card">
-        <iframe src="https://www.youtube.com/embed/YZpYzxnuGms" title="Vídeo Comercial 3"></iframe>
-        <h3>Vídeo Comercial 3</h3>
+        <div class="thumb"><div class="thumb video" data-id="YZpYzxnuGms">
+  <img src="https://img.youtube.com/vi/YZpYzxnuGms/hqdefault.jpg" alt="Vídeo Comercial">
+  <div class="play-button"></div>
+</div></div>
+        <h3>Vídeo Comercial</h3>
         <p>Exemplo de vídeo comercial criado.</p>
         <a href="https://youtu.be/YZpYzxnuGms" target="_blank" class="btn">Assistir no YouTube</a>
       </div>
@@ -71,18 +80,27 @@
     <h2>Animações Motion</h2>
     <div class="projetos">
       <div class="card">
-        <iframe src="https://www.youtube.com/embed/djqCa-An77I" title="Animação Motion 1"></iframe>
-        <h3>Animação Motion 1</h3>
+        <div class="thumb"><div class="thumb video" data-id="djqCa-An77I">
+  <img src="https://img.youtube.com/vi/djqCa-An77I/hqdefault.jpg" alt="Animação Motion">
+  <div class="play-button"></div>
+</div></div>
+        <h3>Animação Motion</h3>
         <a href="https://www.youtube.com/watch?v=djqCa-An77I" target="_blank" class="btn">Assistir no YouTube</a>
       </div>
       <div class="card">
-        <iframe src="https://www.youtube.com/embed/iHmIy1I6vtc" title="Animação Motion 2"></iframe>
-        <h3>Animação Motion 2</h3>
+        <div class="thumb"><div class="thumb video" data-id="iHmIy1I6vtc">
+  <img src="https://img.youtube.com/vi/iHmIy1I6vtc/hqdefault.jpg" alt="Animação Motion">
+  <div class="play-button"></div>
+</div></div>
+        <h3>Animação Motion</h3>
         <a href="https://www.youtube.com/watch?v=iHmIy1I6vtc" target="_blank" class="btn">Assistir no YouTube</a>
       </div>
       <div class="card">
-        <iframe src="https://www.youtube.com/embed/QthQ_-o1_XU" title="Animação Motion 3"></iframe>
-        <h3>Animação Motion 3</h3>
+        <div class="thumb"><div class="thumb video" data-id="QthQ_-o1_XU">
+  <img src="https://img.youtube.com/vi/QthQ_-o1_XU/hqdefault.jpg" alt="Animação Motion">
+  <div class="play-button"></div>
+</div></div>
+        <h3>Animação Motion</h3>
         <a href="https://youtu.be/QthQ_-o1_XU" target="_blank" class="btn">Assistir no YouTube</a>
       </div>
     </div>
@@ -93,6 +111,81 @@
     <h2>Mais Conteúdos em Breve</h2>
     <p>Logo teremos novos conteúdos adicionados aqui. Fique atento para novidades!</p>
   </section>
+  <!-- Abas: Prova Social -->
+  <section id="prova-social">
+    <h2>Resultados &amp; Prova Social</h2>
+
+    <div class="tabs" role="tablist" aria-label="Prova Social">
+      <button class="tab is-active" role="tab" aria-selected="true" aria-controls="painel-depoimentos" id="tab-depoimentos" data-tab="depoimentos">Feedback de clientes</button>
+      <button class="tab" role="tab" aria-selected="false" aria-controls="painel-clientes" id="tab-clientes" data-tab="clientes">Clientes atendidos</button>
+    </div>
+
+    <div class="tabs-panels">
+      <!-- Painel: Depoimentos -->
+      <div class="tab-panel is-active" role="tabpanel" id="painel-depoimentos" aria-labelledby="tab-depoimentos">
+        <div class="depoimentos">
+          <article class="depo-card">
+            <div class="depo-header">
+              <div class="avatar">AM</div>
+              <div>
+                <h3>André Martins</h3>
+                <p class="cargo">Diretor de Marketing • Sellex</p>
+              </div>
+            </div>
+            <p class="depo-text">“O Paulo elevou nosso conteúdo a outro nível. O roteiro e o motion ficaram impecáveis e geraram leads já na primeira semana.”</p>
+          </article>
+          <article class="depo-card">
+            <div class="depo-header">
+              <div class="avatar">LC</div>
+              <div>
+                <h3>Larissa Costa</h3>
+                <p class="cargo">Gerente de Produto • AgroTech</p>
+              </div>
+            </div>
+            <p class="depo-text">“Ágil, criativo e muito profissional. Nossos vídeos institucionais ganharam identidade e consistência.”</p>
+          </article>
+          <article class="depo-card">
+            <div class="depo-header">
+              <div class="avatar">RS</div>
+              <div>
+                <h3>Rafael Souza</h3>
+                <p class="cargo">Founder • EduPlus</p>
+              </div>
+            </div>
+            <p class="depo-text">“Excelente parceria! Os materiais de lançamento ajudaram a batermos a meta do trimestre.”</p>
+          </article>
+        </div>
+      </div>
+
+      <!-- Painel: Clientes Atendidos -->
+      <div class="tab-panel" role="tabpanel" id="painel-clientes" aria-labelledby="tab-clientes" hidden>
+        <div class="stats">
+          <div class="stat">
+            <span class="stat-number" data-count="120">0</span>
+            <span class="stat-label">Projetos entregues</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number" data-count="45">0</span>
+            <span class="stat-label">Clientes atendidos</span>
+          </div>
+          <div class="stat">
+            <span class="stat-number" data-count="12">0</span>
+            <span class="stat-label">Setores de atuação</span>
+          </div>
+        </div>
+        <div class="logo-grid">
+          <div class="logo">DJ ALOK</div>
+          <div class="logo">DJ PATRICK MUNIZ</div>
+          <div class="logo">ABUDSADEK</div>
+          <div class="logo">DJ LUCAS BEAT</div>
+          <div class="logo">JOÃO GOMES</div>
+          <div class="logo">TARCÍSIO DO ACORDEON</div>
+          <div class="logo">GIORGIO BARONE</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <section>
     <h2>Contato</h2>
@@ -100,6 +193,152 @@
     <a href="https://wa.me/554989028934" target="_blank" class="btn">WhatsApp</a>
     <a href="https://instagram.com/paulocineflow" target="_blank" class="btn">Instagram</a>
   </section>
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const iframes = document.querySelectorAll("iframe");
+    // garantir que a API JS do YouTube esteja habilitada em todos os iframes
+    iframes.forEach(iframe => {
+      if (iframe.src.includes("youtube.com") && !iframe.src.includes("enablejsapi=1")) {
+        iframe.src += (iframe.src.includes("?") ? "&" : "?") + "enablejsapi=1";
+      }
+    });
+    // escuta mensagens da API do YouTube
+    window.addEventListener("message", function (event) {
+      if (event.data && typeof event.data === "string" && event.data.includes('onStateChange')) {
+        try {
+          const data = JSON.parse(event.data);
+          if (data.event === 'onStateChange' && data.info === 1) { // estado 1 = tocando
+            iframes.forEach(frame => {
+              if (frame.contentWindow !== event.source) {
+                frame.contentWindow.postMessage('{"event":"command","func":"pauseVideo","args":""}', '*');
+              }
+            });
+          }
+        } catch(e) {}
+      }
+    });
+  });
+</script>
+
+
+<script>
+  document.addEventListener("click", function(e){
+    if(e.target.closest(".thumb.video")){
+      const div = e.target.closest(".thumb.video");
+      const videoId = div.dataset.id;
+      const iframe = document.createElement("iframe");
+      iframe.setAttribute("src", "https://www.youtube.com/embed/" + videoId + "?autoplay=1&modestbranding=1&rel=0&controls=1");
+      iframe.setAttribute("frameborder", "0");
+      iframe.setAttribute("allow", "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture");
+      iframe.setAttribute("allowfullscreen", "1");
+      iframe.style.width = "100%";
+      iframe.style.height = "100%";
+      div.innerHTML = "";
+      div.appendChild(iframe);
+    }
+  });
+</script>
+
+
+<script>
+  (function(){
+    function buildThumb(div){
+      var id = div.dataset.id, title = div.dataset.title || 'Vídeo';
+      // limpa
+      while(div.firstChild) div.removeChild(div.firstChild);
+      // cria imagem com tentativa de alta resolução e fallback
+      var img = new Image();
+      img.alt = title;
+      img.decoding = "async";
+      img.loading = "lazy";
+      img.src = "https://img.youtube.com/vi/" + id + "/maxresdefault.jpg";
+      img.onerror = function(){ img.src = "https://img.youtube.com/vi/" + id + "/hqdefault.jpg"; };
+      div.appendChild(img);
+      // botão play
+      var play = document.createElement("div");
+      play.className = "play-button";
+      div.appendChild(play);
+    }
+
+    // Clique para trocar por iframe e pausar os demais (voltando para thumb)
+    document.addEventListener("click", function(e){
+      var target = e.target.closest(".thumb.video");
+      if(!target) return;
+      // Reverte outros players
+      document.querySelectorAll(".thumb.video").forEach(function(t){
+        if(t !== target && t.querySelector("iframe")){
+          buildThumb(t);
+        }
+      });
+      // Monta iframe
+      var id = target.dataset.id;
+      var iframe = document.createElement("iframe");
+      iframe.src = "https://www.youtube.com/embed/" + id + "?autoplay=1&modestbranding=1&rel=0&controls=1";
+      iframe.frameBorder = "0";
+      iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share";
+      iframe.allowFullscreen = true;
+      // troca conteúdo
+      while(target.firstChild) target.removeChild(target.firstChild);
+      target.appendChild(iframe);
+    }, false);
+
+    // Garantir que todas as .thumb.video tenham thumbnail construída
+    document.addEventListener("DOMContentLoaded", function(){
+      document.querySelectorAll(".thumb.video").forEach(function(div){
+        // Se ainda não tem iframe, garanta a imagem (caso removida em edições)
+        if(!div.querySelector("img") && !div.querySelector("iframe")){
+          buildThumb(div);
+        }
+      });
+    });
+  })();
+</script>
+
+
+<script>
+  // Tabs switching
+  document.addEventListener('click', function(e){
+    const btn = e.target.closest('.tab');
+    if(!btn) return;
+    const wrapper = btn.closest('#prova-social');
+    const tabs = wrapper.querySelectorAll('.tab');
+    const panels = wrapper.querySelectorAll('.tab-panel');
+    tabs.forEach(t => { t.classList.remove('is-active'); t.setAttribute('aria-selected','false'); });
+    panels.forEach(p => { p.classList.remove('is-active'); p.setAttribute('hidden',''); });
+
+    btn.classList.add('is-active'); btn.setAttribute('aria-selected','true');
+    const target = btn.dataset.tab === 'clientes' ? '#painel-clientes' : '#painel-depoimentos';
+    const panel = wrapper.querySelector(target);
+    panel.classList.add('is-active'); panel.removeAttribute('hidden');
+
+    // start counters if opening clientes panel
+    if (target === '#painel-clientes') {
+      startCounters(panel);
+    }
+  }, false);
+
+  // Simple number counters
+  let countersInit = false;
+  function startCounters(scope){
+    if(countersInit) return;
+    countersInit = true;
+    scope.querySelectorAll('.stat-number').forEach(function(el){
+      const end = parseInt(el.getAttribute('data-count') || '0', 10);
+      const dur = 900;
+      const start = 0;
+      const t0 = performance.now();
+      function tick(now){
+        const p = Math.min(1, (now - t0)/dur);
+        const val = Math.floor(start + (end-start)*(p*p*(3-2*p))); // easeInOut
+        el.textContent = val.toString();
+        if(p < 1) requestAnimationFrame(tick);
+      }
+      requestAnimationFrame(tick);
+    });
+  }
+</script>
 
 </body>
 </html>
