--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
+
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfólio - Paulo Lima</title>
-  <!-- Link para o CSS externo -->
-  <link rel="stylesheet" href="style.css">
-  <!-- Fonte Cauten Bold -->
-  <link href="https://fonts.googleapis.com/css2?family=Cauten:wght@700&display=swap" rel="stylesheet">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Portfólio - Paulo Lima</title>
+<!-- Link para o CSS externo -->
+<link href="style.css" rel="stylesheet"/>
+<!-- Fonte Cauten Bold -->
+<link href="https://fonts.googleapis.com/css2?family=Cauten:wght@700&amp;display=swap" rel="stylesheet"/>
+<style>
     body {
       font-family: 'Cauten', sans-serif;
     }
@@ -26,175 +27,155 @@
   </style>
 </head>
 <body>
-
-  <header>
-    <h1>Paulo Lima</h1>
-    <p class="subtitle">Motion Designer & Videomaker</p>
-    <div class="socials">
-      <a href="https://instagram.com/paulocineflow" target="_blank">📷</a>
-      <a href="https://wa.me/554989028934" target="_blank">💬</a>
-    </div>
-  </header>
-
-  <section>
-    <h2>Sobre mim</h2>
-    <p>Sou Paulo, apaixonado por motion design, vídeos e criação de conteúdo digital. Busco transformar ideias em imagens e histórias impactantes.</p>
-  </section>
-
-  <!-- Vídeos Comerciais -->
-  <section>
-    <h2>Vídeos Comerciais</h2>
-    <div class="projetos">
-      <div class="card">
-        <div class="thumb"><div class="thumb video" data-id="uO08ciSgcn4">
-  <img src="https://img.youtube.com/vi/uO08ciSgcn4/hqdefault.jpg" alt="Vídeo Comercial">
-  <div class="play-button"></div>
+<header class="hero">
+<h1>Paulo Lima</h1>
+<p class="subtitle">Motion Designer &amp; Videomaker</p>
+<div class="socials">
+<a href="https://instagram.com/paulocineflow" target="_blank">📷</a>
+<a href="https://wa.me/554989028934" target="_blank">💬</a>
+</div>
+</header>
+<section>
+<h2>Sobre mim</h2>
+<p>Sou Paulo, apaixonado por motion design, vídeos e criação de conteúdo digital. Busco transformar ideias em imagens e histórias impactantes.</p>
+</section>
+<!-- Vídeos Comerciais -->
+<section>
+<h2>Vídeos Comerciais</h2>
+<div class="projetos">
+<div class="card">
+<div class="thumb"><div class="thumb video" data-id="uO08ciSgcn4">
+<img alt="Vídeo Comercial" src="https://img.youtube.com/vi/uO08ciSgcn4/hqdefault.jpg"/>
+<div class="play-button"></div>
 </div></div>
-        <h3>Vídeo Comercial</h3>
-        <p>Exemplo de vídeo comercial criado.</p>
-        <a href="https://youtu.be/uO08ciSgcn4" target="_blank" class="btn">Assistir no YouTube</a>
-      </div>
-      <div class="card">
-        <div class="thumb"><div class="thumb video" data-id="tn-rhatSRdU">
-  <img src="https://img.youtube.com/vi/tn-rhatSRdU/hqdefault.jpg" alt="Vídeo Comercial">
-  <div class="play-button"></div>
+<h3>Vídeo Comercial</h3>
+<p>Exemplo de vídeo comercial criado.</p>
+<a class="btn" href="https://youtu.be/uO08ciSgcn4" target="_blank">Assistir no YouTube</a>
+</div>
+<div class="card">
+<div class="thumb"><div class="thumb video" data-id="tn-rhatSRdU">
+<img alt="Vídeo Comercial" src="https://img.youtube.com/vi/tn-rhatSRdU/hqdefault.jpg"/>
+<div class="play-button"></div>
 </div></div>
-        <h3>Vídeo Comercial</h3>
-        <p>Exemplo de vídeo comercial criado.</p>
-        <a href="https://youtu.be/tn-rhatSRdU" target="_blank" class="btn">Assistir no YouTube</a>
-      </div>
-      <div class="card">
-        <div class="thumb"><div class="thumb video" data-id="YZpYzxnuGms">
-  <img src="https://img.youtube.com/vi/YZpYzxnuGms/hqdefault.jpg" alt="Vídeo Comercial">
-  <div class="play-button"></div>
+<h3>Vídeo Comercial</h3>
+<p>Exemplo de vídeo comercial criado.</p>
+<a class="btn" href="https://youtu.be/tn-rhatSRdU" target="_blank">Assistir no YouTube</a>
+</div>
+<div class="card">
+<div class="thumb"><div class="thumb video" data-id="YZpYzxnuGms">
+<img alt="Vídeo Comercial" src="https://img.youtube.com/vi/YZpYzxnuGms/hqdefault.jpg"/>
+<div class="play-button"></div>
 </div></div>
-        <h3>Vídeo Comercial</h3>
-        <p>Exemplo de vídeo comercial criado.</p>
-        <a href="https://youtu.be/YZpYzxnuGms" target="_blank" class="btn">Assistir no YouTube</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Animações Motion -->
-  <section>
-    <h2>Animações Motion</h2>
-    <div class="projetos">
-      <div class="card">
-        <div class="thumb"><div class="thumb video" data-id="djqCa-An77I">
-  <img src="https://img.youtube.com/vi/djqCa-An77I/hqdefault.jpg" alt="Animação Motion">
-  <div class="play-button"></div>
+<h3>Vídeo Comercial</h3>
+<p>Exemplo de vídeo comercial criado.</p>
+<a class="btn" href="https://youtu.be/YZpYzxnuGms" target="_blank">Assistir no YouTube</a>
+</div>
+</div>
+</section>
+<!-- Animações Motion -->
+<section>
+<h2>Animações Motion</h2>
+<div class="projetos">
+<div class="card">
+<div class="thumb"><div class="thumb video" data-id="djqCa-An77I">
+<img alt="Animação Motion" src="https://img.youtube.com/vi/djqCa-An77I/hqdefault.jpg"/>
+<div class="play-button"></div>
 </div></div>
-        <h3>Animação Motion</h3>
-        <a href="https://www.youtube.com/watch?v=djqCa-An77I" target="_blank" class="btn">Assistir no YouTube</a>
-      </div>
-      <div class="card">
-        <div class="thumb"><div class="thumb video" data-id="iHmIy1I6vtc">
-  <img src="https://img.youtube.com/vi/iHmIy1I6vtc/hqdefault.jpg" alt="Animação Motion">
-  <div class="play-button"></div>
+<h3>Animação Motion</h3>
+<a class="btn" href="https://www.youtube.com/watch?v=djqCa-An77I" target="_blank">Assistir no YouTube</a>
+</div>
+<div class="card">
+<div class="thumb"><div class="thumb video" data-id="iHmIy1I6vtc">
+<img alt="Animação Motion" src="https://img.youtube.com/vi/iHmIy1I6vtc/hqdefault.jpg"/>
+<div class="play-button"></div>
 </div></div>
-        <h3>Animação Motion</h3>
-        <a href="https://www.youtube.com/watch?v=iHmIy1I6vtc" target="_blank" class="btn">Assistir no YouTube</a>
-      </div>
-      <div class="card">
-        <div class="thumb"><div class="thumb video" data-id="QthQ_-o1_XU">
-  <img src="https://img.youtube.com/vi/QthQ_-o1_XU/hqdefault.jpg" alt="Animação Motion">
-  <div class="play-button"></div>
+<h3>Animação Motion</h3>
+<a class="btn" href="https://www.youtube.com/watch?v=iHmIy1I6vtc" target="_blank">Assistir no YouTube</a>
+</div>
+<div class="card">
+<div class="thumb"><div class="thumb video" data-id="QthQ_-o1_XU">
+<img alt="Animação Motion" src="https://img.youtube.com/vi/QthQ_-o1_XU/hqdefault.jpg"/>
+<div class="play-button"></div>
 </div></div>
-        <h3>Animação Motion</h3>
-        <a href="https://youtu.be/QthQ_-o1_XU" target="_blank" class="btn">Assistir no YouTube</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Mensagem de novos conteúdos -->
-  <section>
-    <h2>Mais Conteúdos em Breve</h2>
-    <p>Logo teremos novos conteúdos adicionados aqui. Fique atento para novidades!</p>
-  </section>
-  <!-- Abas: Prova Social -->
-  <section id="prova-social">
-    <h2>Resultados &amp; Prova Social</h2>
-
-    <div class="tabs" role="tablist" aria-label="Prova Social">
-      <button class="tab is-active" role="tab" aria-selected="true" aria-controls="painel-depoimentos" id="tab-depoimentos" data-tab="depoimentos">Feedback de clientes</button>
-      <button class="tab" role="tab" aria-selected="false" aria-controls="painel-clientes" id="tab-clientes" data-tab="clientes">Clientes atendidos</button>
-    </div>
-
-    <div class="tabs-panels">
-      <!-- Painel: Depoimentos -->
-      <div class="tab-panel is-active" role="tabpanel" id="painel-depoimentos" aria-labelledby="tab-depoimentos">
-        <div class="depoimentos">
-          <article class="depo-card">
-            <div class="depo-header">
-              <div class="avatar">AM</div>
-              <div>
-                <h3>André Martins</h3>
-                <p class="cargo">Diretor de Marketing • Sellex</p>
-              </div>
-            </div>
-            <p class="depo-text">“O Paulo elevou nosso conteúdo a outro nível. O roteiro e o motion ficaram impecáveis e geraram leads já na primeira semana.”</p>
-          </article>
-          <article class="depo-card">
-            <div class="depo-header">
-              <div class="avatar">LC</div>
-              <div>
-                <h3>Larissa Costa</h3>
-                <p class="cargo">Gerente de Produto • AgroTech</p>
-              </div>
-            </div>
-            <p class="depo-text">“Ágil, criativo e muito profissional. Nossos vídeos institucionais ganharam identidade e consistência.”</p>
-          </article>
-          <article class="depo-card">
-            <div class="depo-header">
-              <div class="avatar">RS</div>
-              <div>
-                <h3>Rafael Souza</h3>
-                <p class="cargo">Founder • EduPlus</p>
-              </div>
-            </div>
-            <p class="depo-text">“Excelente parceria! Os materiais de lançamento ajudaram a batermos a meta do trimestre.”</p>
-          </article>
-        </div>
-      </div>
-
-      <!-- Painel: Clientes Atendidos -->
-      <div class="tab-panel" role="tabpanel" id="painel-clientes" aria-labelledby="tab-clientes" hidden>
-        <div class="stats">
-          <div class="stat">
-            <span class="stat-number" data-count="120">0</span>
-            <span class="stat-label">Projetos entregues</span>
-          </div>
-          <div class="stat">
-            <span class="stat-number" data-count="45">0</span>
-            <span class="stat-label">Clientes atendidos</span>
-          </div>
-          <div class="stat">
-            <span class="stat-number" data-count="12">0</span>
-            <span class="stat-label">Setores de atuação</span>
-          </div>
-        </div>
-        <div class="logo-grid">
-          <div class="logo">DJ ALOK</div>
-          <div class="logo">DJ PATRICK MUNIZ</div>
-          <div class="logo">ABUDSADEK</div>
-          <div class="logo">DJ LUCAS BEAT</div>
-          <div class="logo">JOÃO GOMES</div>
-          <div class="logo">TARCÍSIO DO ACORDEON</div>
-          <div class="logo">GIORGIO BARONE</div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <section>
-    <h2>Contato</h2>
-    <p>Gostaria de trabalhar comigo ou conhecer mais sobre meus projetos? Entre em contato!</p>
-    <a href="https://wa.me/554989028934" target="_blank" class="btn">WhatsApp</a>
-    <a href="https://instagram.com/paulocineflow" target="_blank" class="btn">Instagram</a>
-  </section>
-
-
+<h3>Animação Motion</h3>
+<a class="btn" href="https://youtu.be/QthQ_-o1_XU" target="_blank">Assistir no YouTube</a>
+</div>
+</div>
+</section>
+<!-- Mensagem de novos conteúdos -->
+<section>
+<h2>Mais Conteúdos em Breve</h2>
+<p>Logo teremos novos conteúdos adicionados aqui. Fique atento para novidades!</p>
+</section>
+<!-- Abas: Prova Social -->
+<section id="prova-social">
+<h2>Resultados &amp; Prova Social</h2>
+<div aria-label="Prova Social" class="tabs" role="tablist">
+<button aria-controls="painel-depoimentos" aria-selected="true" class="tab is-active" data-tab="depoimentos" id="tab-depoimentos" role="tab">Feedback de clientes</button>
+<button aria-controls="painel-clientes" aria-selected="false" class="tab" data-tab="clientes" id="tab-clientes" role="tab">Clientes atendidos</button>
+</div>
+<div class="tabs-panels">
+<!-- Painel: Depoimentos -->
+<div aria-labelledby="tab-depoimentos" class="tab-panel is-active" id="painel-depoimentos" role="tabpanel">
+<div class="depoimentos">
+<article class="depo-card">
+<div class="depo-header">
+<div class="avatar">AM</div>
+<div>
+<h3>André Martins</h3>
+<p class="cargo">Diretor de Marketing • Sellex</p>
+</div>
+</div>
+<p class="depo-text">“O Paulo elevou nosso conteúdo a outro nível. O roteiro e o motion ficaram impecáveis e geraram leads já na primeira semana.”</p>
+</article>
+<article class="depo-card">
+<div class="depo-header">
+<div class="avatar">LC</div>
+<div>
+<h3>Larissa Costa</h3>
+<p class="cargo">Gerente de Produto • AgroTech</p>
+</div>
+</div>
+<p class="depo-text">“Ágil, criativo e muito profissional. Nossos vídeos institucionais ganharam identidade e consistência.”</p>
+</article>
+<article class="depo-card">
+<div class="depo-header">
+<div class="avatar">RS</div>
+<div>
+<h3>Rafael Souza</h3>
+<p class="cargo">Founder • EduPlus</p>
+</div>
+</div>
+<p class="depo-text">“Excelente parceria! Os materiais de lançamento ajudaram a batermos a meta do trimestre.”</p>
+</article>
+</div>
+</div>
+<!-- Painel: Clientes Atendidos -->
+<div aria-labelledby="tab-clientes" class="tab-panel" hidden="" id="painel-clientes" role="tabpanel">
+<div class="stats">
+<div class="stat">
+<span class="stat-number" data-count="120">0</span>
+<span class="stat-label">Projetos entregues</span>
+</div>
+<div class="stat">
+<span class="stat-number" data-count="45">0</span>
+<span class="stat-label">Clientes atendidos</span>
+</div>
+<div class="stat">
+<span class="stat-number" data-count="12">0</span>
+<span class="stat-label">Setores de atuação</span>
+</div>
+</div>
+<div class="logo-grid"><div class="client-item"><img alt="Foto de DJ ALOK" class="client-avatar" src="images/clients/client1.jpg"/><span class="client-name">DJ ALOK</span></div><div class="client-item"><img alt="Foto de DJ PATRICK MUNIZ" class="client-avatar" src="images/clients/client2.jpg"/><span class="client-name">DJ PATRICK MUNIZ</span></div><div class="client-item"><img alt="Foto de ABUDSADEK" class="client-avatar" src="images/clients/client3.jpg"/><span class="client-name">ABUDSADEK</span></div><div class="client-item"><img alt="Foto de DJ LUCAS BEAT" class="client-avatar" src="images/clients/client4.jpg"/><span class="client-name">DJ LUCAS BEAT</span></div><div class="client-item"><img alt="Foto de JOÃO GOMES" class="client-avatar" src="images/clients/client5.jpg"/><span class="client-name">JOÃO GOMES</span></div><div class="client-item"><img alt="Foto de TARCÍSIO DO ACORDEON" class="client-avatar" src="images/clients/client6.jpg"/><span class="client-name">TARCÍSIO DO ACORDEON</span></div><div class="client-item"><img alt="Foto de GIORGIO BARONE" class="client-avatar" src="images/clients/client7.jpg"/><span class="client-name">GIORGIO BARONE</span></div></div>
+</div>
+</div>
+</section>
+<section>
+<h2>Contato</h2>
+<p>Gostaria de trabalhar comigo ou conhecer mais sobre meus projetos? Entre em contato!</p>
+<a class="btn" href="https://wa.me/554989028934" target="_blank">WhatsApp</a>
+<a class="btn" href="https://instagram.com/paulocineflow" target="_blank">Instagram</a>
+</section>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const iframes = document.querySelectorAll("iframe");
@@ -221,8 +202,6 @@
     });
   });
 </script>
-
-
 <script>
   document.addEventListener("click", function(e){
     if(e.target.closest(".thumb.video")){
@@ -240,8 +219,6 @@
     }
   });
 </script>
-
-
 <script>
   (function(){
     function buildThumb(div){
@@ -295,8 +272,6 @@
     });
   })();
 </script>
-
-
 <script>
   // Tabs switching
   document.addEventListener('click', function(e){
@@ -339,6 +314,5 @@
     });
   }
 </script>
-
 </body>
 </html>
