--- a/index.html
+++ b/index.html
@@ -8,32 +8,13 @@
 <!-- Link para o CSS externo -->
 <link href="style.css" rel="stylesheet"/>
 <!-- Fonte Cauten Bold -->
-<link href="https://fonts.googleapis.com/css2?family=Cauten:wght@700&amp;display=swap" rel="stylesheet"/>
-<style>
-    body {
-      font-family: 'Cauten', sans-serif;
-    }
-    section p {
-      font-size: 1.2rem;
-    }
-    .card iframe {
-      width: 100%;
-      aspect-ratio: 16/9;
-      height: auto;
-      border-radius: 10px;
-      margin-bottom: 1rem;
-      display: block;
-    }
-  </style>
+
 </head>
 <body>
 <header class="hero">
 <h1>Paulo Lima</h1>
 <p class="subtitle">Motion Designer &amp; Videomaker</p>
-<div class="socials">
-<a href="https://instagram.com/paulocineflow" target="_blank">📷</a>
-<a href="https://wa.me/554989028934" target="_blank">💬</a>
-</div>
+<div class="socials"></div>
 </header>
 <section>
 <h2>Sobre mim</h2>
@@ -42,39 +23,11 @@
 <!-- Vídeos Comerciais -->
 <section>
 <h2>Vídeos Comerciais</h2>
-<div class="projetos">
-<div class="card">
-<div class="thumb"><div class="thumb video" data-id="uO08ciSgcn4">
-<img alt="Vídeo Comercial" src="https://img.youtube.com/vi/uO08ciSgcn4/hqdefault.jpg"/>
-<div class="play-button"></div>
-</div></div>
-<h3>Vídeo Comercial</h3>
-<p>Exemplo de vídeo comercial criado.</p>
-<a class="btn" href="https://youtu.be/uO08ciSgcn4" target="_blank">Assistir no YouTube</a>
-</div>
-<div class="card">
-<div class="thumb"><div class="thumb video" data-id="tn-rhatSRdU">
-<img alt="Vídeo Comercial" src="https://img.youtube.com/vi/tn-rhatSRdU/hqdefault.jpg"/>
-<div class="play-button"></div>
-</div></div>
-<h3>Vídeo Comercial</h3>
-<p>Exemplo de vídeo comercial criado.</p>
-<a class="btn" href="https://youtu.be/tn-rhatSRdU" target="_blank">Assistir no YouTube</a>
-</div>
-<div class="card">
-<div class="thumb"><div class="thumb video" data-id="YZpYzxnuGms">
-<img alt="Vídeo Comercial" src="https://img.youtube.com/vi/YZpYzxnuGms/hqdefault.jpg"/>
-<div class="play-button"></div>
-</div></div>
-<h3>Vídeo Comercial</h3>
-<p>Exemplo de vídeo comercial criado.</p>
-<a class="btn" href="https://youtu.be/YZpYzxnuGms" target="_blank">Assistir no YouTube</a>
-</div>
-</div>
+<p>Novos conteúdos de vídeos comerciais em breve</p>
 </section>
 <!-- Animações Motion -->
 <section>
-<h2>Animações Motion</h2>
+<h2>Textual Typographic Animations</h2>
 <div class="projetos">
 <div class="card">
 <div class="thumb"><div class="thumb video" data-id="djqCa-An77I">
@@ -93,12 +46,12 @@
 <a class="btn" href="https://www.youtube.com/watch?v=iHmIy1I6vtc" target="_blank">Assistir no YouTube</a>
 </div>
 <div class="card">
-<div class="thumb"><div class="thumb video" data-id="QthQ_-o1_XU">
-<img alt="Animação Motion" src="https://img.youtube.com/vi/QthQ_-o1_XU/hqdefault.jpg"/>
+<div class="thumb"><div class="thumb video" data-id="tkawMYxbU1U">
+<img alt="Animação Motion" src="https://img.youtube.com/vi/tkawMYxbU1U/hqdefault.jpg"/>
 <div class="play-button"></div>
 </div></div>
 <h3>Animação Motion</h3>
-<a class="btn" href="https://youtu.be/QthQ_-o1_XU" target="_blank">Assistir no YouTube</a>
+<a class="btn" href="https://youtu.be/tkawMYxbU1U" target="_blank">Assistir no YouTube</a>
 </div>
 </div>
 </section>
